- Implement DAL for BuildEventerDAL - Implement the BuildEventerDAL (Data Access Layer) to parse xml file. And apply for both BuildEventer and PostBuild using BuildEventerDAL (+1 squashed commits) - Implemented PostBuild tool for execute xml configuration in CommandLine.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/BuildEventer/BuildEventer/obj
-/BuildEventer/BuildEventer/bin
+**/obj
+**/bin
 BuildEventer/packages/
 BuildEventer/BuildEventer/packages.config
