--- a/BuildEventer/BuildEventer/BuildEventer.csproj
+++ b/BuildEventer/BuildEventer/BuildEventer.csproj
@@ -247,6 +247,12 @@
   <ItemGroup>
     <Resource Include="Resources\Entypo-license.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BuildEventerDAL\BuildEventerDAL.csproj">
+      <Project>{86118075-7384-4fdb-9350-f0a6e850432b}</Project>
+      <Name>BuildEventerDAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
